[package]
name = "git-author-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["derive"] }
hashbrown = "0.13.2"
lazy_static = "1.4.0"
regex = "1.8.1"
threadpool = "1.8.1"
